fix bottom button spacing

--- a/pages/prompts/prompts.module.css
+++ b/pages/prompts/prompts.module.css
@@ -20,9 +20,7 @@
   transform: translate(120%, -50%);
   width: 80vmin;
   max-width: 500px;
-  height: 50%;
-  padding: 5% 0 5% 0;
-  margin-top: 50px;
+  min-height: 50%;
   text-align: center;
   border-radius: 30px;
   background-image: url("/images/notebook.png");
@@ -60,7 +58,9 @@
   }
 }
 
-
+.settings-header h1 {
+  text-decoration: underline;
+}
 .prompt-settings form {
   display: flex;
   flex-direction: column;
@@ -88,19 +88,6 @@
 }
 .type-selection button {
   padding: 4%;
-  border: 2px solid rgb(150, 245, 150);
-  border-radius: 20px;
-  cursor: pointer;
-}
-.generate-button {
-  position: fixed;
-  bottom: 5%;
-  left: 50%;
-  width: 60%;
-  transform: translateX(-50%);
-  padding: 2%;
-  font-size: 1.25rem;
-  background-color: rgb(15, 223, 105);
   border: 2px solid rgb(150, 245, 150);
   border-radius: 20px;
   cursor: pointer;
